<resources>
    <string name="app_name">Tienda Online</string>
    <string name="txt_play">PLAY</string>
    <string name="txt_profile">PROFILE</string>
    <string name="txt_config">CONFIG</string>
    <string name="txt_about">ABOUT</string>
    <string name="txt_clickjugar">Push button play</string>
    <string name="txt_clickconfig">push button config</string>
    <string name="txt_clickabout">push button about</string>
    <string name="txt_clickprofile">push button profile</string>
    <string name="txt_user">User</string>
    <string name="txt_password">Password</string>
    <string name="txt_star">Star session</string>
    <string name="txt_singup">Sing up</string>
    <string name="txt_name">Name</string>
    <string name="txt_lastname">Last Name</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_password_invalid">Password Invalid</string>
    <string name="txt_password_acepted">Password Acepted</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string-array name="Categorias">
        <item>lady jean</item>
        <item>gentleman jean</item>
        <item>blouses</item>
        <item>Tshirts</item>
        <item>lady shirt</item>
        <item>gentleman shirt</item>
    </string-array>
</resources>