<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingupActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/tienda_virtual"
            android:layout_margin="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            >

        </ImageView>
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="20dp"
        >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/txt_name">
         </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/txt_lastname">


    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/txt_email"
        android:inputType="textWebEmailAddress"
        android:layout_margin="10dp"
        >
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:id="@+id/edt_password"
        >

    </EditText>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Accept terms and conditions"
            android:id="@+id/chx_terms"
            >

        </CheckBox>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/txt_singup"
            android:layout_margin="10dp"
            android:id="@+id/btn_registro"
            android:layout_marginEnd="20dp"
            android:enabled="false"
            >

        </Button>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
